--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <b>2015年高雄市</b>(橫軸:蔬果種類 / 縱軸:產量)<br/><br/>
-<div id='chart'></div>
+<a href="#" click="myFc()">open</a>
+<p></p>
 <!-- Load d3.js and c3.js -->
+ 
 <script type="text/javascript">
 var chart = c3.generate({
     data: {
@@ -69,6 +71,9 @@ var chart = c3.generate({
         }
     }
 });
+function myFc(){
+    $("p").append("<div id='chart'></div>");
+}
 </script>
 </body>
 </html>
