--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <b>2015年高雄市</b>(橫軸:蔬果種類 / 縱軸:產量)<br/><br/>
-<a href="#" click="myFc()">open</a>
+<a href="#" onclick="myFc()">open</a>
 <p></p>
 <!-- Load d3.js and c3.js -->
  
