--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var chart = c3.generate({
 <script type="text/javascript">
 $(document).ready(function(){
   $("button").click(function(){
-    $("p").append("<div id='chart'></div>");
+    $("<p>").append("<div id='chart'></div>");
   });
 });
 </script>
