--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Test Chart</title>
 <meta charset="utf-8">
 <link href="c3.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="jquery.min.js"></script>
 <script src="d3.v3.min.js" type="text/javascript"></script>
 <script src="c3.min.js" type="text/javascript"></script>
 
