--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@ var chart = c3.generate({
     }
 });
 </script>
+
 <script type="text/javascript">
 $(document).ready(function(){
-  $("button").click(function(){
+  $("button").onclick(function(){
     $("<p>").append("<div id='chart'></div>");
   });
 });
