--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
-    $("button").onclick(function(){
+    $("button").click(function(){
     $("<p>").append("<div id='chart'></div>");
   
 var chart = c3.generate({
